# meddl_translate

./: Cargo.toml  LICENSE  README.md  de-oger.json
benches/: large-input.rs
examples/: hallo.rs  hello.rs  ignored.rs  long-text.rs
src/: de-oger.json  lib.rs  util.rs
