[package]
name = "meddl_translate"
version = "0.1.0"
edition = "2018"

description = "Translate German to Meddlfrängisch."
license = "MIT"
readme = "README.md"
repository = "https://github.com/CodeF0x/meddl_translate/"
homepage = "https://github.com/CodeF0x/meddl_translate/"

include = ["./de-oger.json"]

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
regex = "1"
serde_json = "1.0.64"