[package]
name = "meddl_translate"
version = "0.1.1"
edition = "2018"

description = "Translate German to Meddlfrängisch."
license = "MIT"
readme = "README.md"
repository = "https://github.com/CodeF0x/meddl_translate/"
homepage = "https://github.com/CodeF0x/meddl_translate/"

# Turns out that when you use "include", you need to list all relevant files for compiling and not just
# one single file you want to include in the binary.
# include = [
#    "./de-oger.json",
#    "src/lib.rs",
#    "examples/**/*",
#    "benches/*/**",
#    "Cargo.toml",
#    "README.md"
#]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
regex = "1"
serde_json = "1.0.64"